--- a/Site/Web2/ranking_adm.html
+++ b/Site/Web2/ranking_adm.html
@@ -169,31 +169,33 @@
             <div class="col" id="geral" >
                 <h2 class="text_white row justify-content-center" >Geral Sobre <span class="ml-1"> IF Sabará</span></h2>
                 <div class="text_col pt-md-3 col-sm-12">
-                    <div id="text_white" class="container-fluid m-4 mx-auto text-justify row">
-                        <div id="card1" class=" col-6 align-self-center m-0 ">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor"
-                                class="bi bi-trophy" id="trp" viewBox="0 0 16 16">
-                                <path
-                                    d="M2.5.5A.5.5 0 0 1 3 0h10a.5.5 0 0 1 .5.5c0 .538-.012 1.05-.034 1.536a3 3 0 1 1-1.133 5.89c-.79 1.865-1.878 2.777-2.833 3.011v2.173l1.425.356c.194.048.377.135.537.255L13.3 15.1a.5.5 0 0 1-.3.9H3a.5.5 0 0 1-.3-.9l1.838-1.379c.16-.12.343-.207.537-.255L6.5 13.11v-2.173c-.955-.234-2.043-1.146-2.833-3.012a3 3 0 1 1-1.132-5.89A33.076 33.076 0 0 1 2.5.5zm.099 2.54a2 2 0 0 0 .72 3.935c-.333-1.05-.588-2.346-.72-3.935zm10.083 3.935a2 2 0 0 0 .72-3.935c-.133 1.59-.388 2.885-.72 3.935zM3.504 1c.007.517.026 1.006.056 1.469.13 2.028.457 3.546.87 4.667C5.294 9.48 6.484 10 7 10a.5.5 0 0 1 .5.5v2.61a1 1 0 0 1-.757.97l-1.426.356a.5.5 0 0 0-.179.085L4.5 15h7l-.638-.479a.501.501 0 0 0-.18-.085l-1.425-.356a1 1 0 0 1-.757-.97V10.5A.5.5 0 0 1 9 10c.516 0 1.706-.52 2.57-2.864.413-1.12.74-2.64.87-4.667.03-.463.049-.952.056-1.469H3.504z" />
-                            </svg>
-                        </div>
-                        <div class="container-fluid col-6" id="ran">
-                            <p>X KG</p>
-                            <p class="cor">Geral</p>
-                        </div>
-                    </div>
                     <div id="text_white" class="container-fluid mx-auto text-justify row">
-                        <div id="card1" class=" col-6 align-self-center m-0 ">
+                        <div id="card1" class=" align-self-center justify-content-center d-inline-flex container-fluid m-0 p-0 ">
                             <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor"
-                                class="bi bi-trophy" id="trp" viewBox="0 0 16 16">
+                                class="bi bi-trophy mx-auto align-self-center" id="trp" viewBox="0 0 16 16">
                                 <path
                                     d="M2.5.5A.5.5 0 0 1 3 0h10a.5.5 0 0 1 .5.5c0 .538-.012 1.05-.034 1.536a3 3 0 1 1-1.133 5.89c-.79 1.865-1.878 2.777-2.833 3.011v2.173l1.425.356c.194.048.377.135.537.255L13.3 15.1a.5.5 0 0 1-.3.9H3a.5.5 0 0 1-.3-.9l1.838-1.379c.16-.12.343-.207.537-.255L6.5 13.11v-2.173c-.955-.234-2.043-1.146-2.833-3.012a3 3 0 1 1-1.132-5.89A33.076 33.076 0 0 1 2.5.5zm.099 2.54a2 2 0 0 0 .72 3.935c-.333-1.05-.588-2.346-.72-3.935zm10.083 3.935a2 2 0 0 0 .72-3.935c-.133 1.59-.388 2.885-.72 3.935zM3.504 1c.007.517.026 1.006.056 1.469.13 2.028.457 3.546.87 4.667C5.294 9.48 6.484 10 7 10a.5.5 0 0 1 .5.5v2.61a1 1 0 0 1-.757.97l-1.426.356a.5.5 0 0 0-.179.085L4.5 15h7l-.638-.479a.501.501 0 0 0-.18-.085l-1.425-.356a1 1 0 0 1-.757-.97V10.5A.5.5 0 0 1 9 10c.516 0 1.706-.52 2.57-2.864.413-1.12.74-2.64.87-4.667.03-.463.049-.952.056-1.469H3.504z" />
                             </svg>
+                            <div class="d-flex flex-column mx-auto align-self-center justify-content-center" id="ran">
+                                <span class="align-self-center align-content-stretch flex-warp">X KG</span>
+                                <span class="cor align-self-center align-content-stretch flex-warp">Geral</span>
+                            </div>
                         </div>
-                        <div class="container-fluid col-6" id="ran">
-                            <p>X KG</p>
-                            <p class="cor">Orgânico</p>
+                        
+                    </div>
+                    <div id="text_white" class="container-fluid mx-auto text-justify row mt-3">
+                        <div id="card1" class=" align-self-center justify-content-center d-inline-flex container-fluid m-0 p-0 ">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor"
+                                class="bi bi-trophy mx-auto align-self-center" id="trp" viewBox="0 0 16 16">
+                                <path
+                                    d="M2.5.5A.5.5 0 0 1 3 0h10a.5.5 0 0 1 .5.5c0 .538-.012 1.05-.034 1.536a3 3 0 1 1-1.133 5.89c-.79 1.865-1.878 2.777-2.833 3.011v2.173l1.425.356c.194.048.377.135.537.255L13.3 15.1a.5.5 0 0 1-.3.9H3a.5.5 0 0 1-.3-.9l1.838-1.379c.16-.12.343-.207.537-.255L6.5 13.11v-2.173c-.955-.234-2.043-1.146-2.833-3.012a3 3 0 1 1-1.132-5.89A33.076 33.076 0 0 1 2.5.5zm.099 2.54a2 2 0 0 0 .72 3.935c-.333-1.05-.588-2.346-.72-3.935zm10.083 3.935a2 2 0 0 0 .72-3.935c-.133 1.59-.388 2.885-.72 3.935zM3.504 1c.007.517.026 1.006.056 1.469.13 2.028.457 3.546.87 4.667C5.294 9.48 6.484 10 7 10a.5.5 0 0 1 .5.5v2.61a1 1 0 0 1-.757.97l-1.426.356a.5.5 0 0 0-.179.085L4.5 15h7l-.638-.479a.501.501 0 0 0-.18-.085l-1.425-.356a1 1 0 0 1-.757-.97V10.5A.5.5 0 0 1 9 10c.516 0 1.706-.52 2.57-2.864.413-1.12.74-2.64.87-4.667.03-.463.049-.952.056-1.469H3.504z" />
+                            </svg>
+                            <div class="d-flex flex-column mx-auto align-self-center justify-content-center" id="ran">
+                                <span class="align-self-center align-content-stretch flex-warp">X KG</span>
+                                <span class="cor align-self-center align-content-stretch flex-warp">Orgânico</span>
+                            </div>
                         </div>
+                        
                     </div>
                 </div>
             </div>
