--- a/Site/Web2/coleta_adm.html
+++ b/Site/Web2/coleta_adm.html
@@ -127,7 +127,7 @@
     <div class="indiciplina align-self-center mx-auto " id="c_blue">
         <div class="d-flex flex-column" id="titulo">
             <h1 class="align-self-center mx-auto">Coleta</h1>
-            <p class="col">Informe sobre a ultima coleta</p>
+            <p class="col">Informe sobre a ultima coleta:</p>
         </div>
         <div class=" d-flex flex-column container-fluid align-self-center justify-content-center" id="text_white">
             
@@ -153,15 +153,15 @@
             <div class="row mx-auto d-flex flex-sm-column flex-md-row align-self-center justify-content-center" id="data">
                 <div class="form-group align-self-center col-md-4 col-sm-12" id="select_trash4">
                     <label>Dia</label>
-                    <input type="text" class="form-control " id="inputDia" placeholder="Dia" required>
+                    <input type="text" class="form-control mx-auto" id="inputDia" placeholder="Dia" required>
                 </div>
                 <div class="form-group align-self-center col-md-4 col-sm-12" id="select_trash5">
                     <label>Mês</label>
-                    <input type="text" class="form-control " id="inputMes" placeholder="Mês" required>
+                    <input type="text" class="form-control mx-auto" id="inputMes" placeholder="Mês" required>
                 </div>
                 <div class="form-group align-self-center col-md-4 col-sm-12" id="select_trash6">
                     <label class="" >Ano</label>
-                    <input type="text" class="form-control " id="inputAno" placeholder="Ano" required>
+                    <input type="text" class="form-control mx-auto" id="inputAno" placeholder="Ano" required>
                 </div>
             </div>
             <div class="criarFeed align-self-center">
