--- a/Site/Web2/conta_adm.html
+++ b/Site/Web2/conta_adm.html
@@ -13,12 +13,19 @@
     <script src="/node_modules/jquery/dist/jquery.slim.js"></script>
     <script src="/node_modules/popper/index.js"></script>
     <script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-
+    <script src="script/carregamento.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
 
 
 <body class="">
+    <div id="preloader">
+        <div class="inner">
+            <div class="spinner-border text-light d-block"
+                style="width: 15rem; height: 15rem;" role="status">
+            </div>
+        </div>
+    </div>
     <!-- Cabeçalho -->
     <header>
         <nav class="navbar navbar-expand-lg navbar-light" id="subNav">
@@ -281,7 +288,7 @@
             </div>
 
         </div>
-        <p id="mailInfo" class="text-center pt-5">Quer alterar algum dado diferente? Mande um <a href="mailto:projetotrashmap@gmail.com?subject=Aluno:%20Alterar%20dados" id="emailTo" class="text-decoration-none" style="padding-left: 0.3rem !important;"> e-mail  para a equipe:  trashmap.if@gmail.com</a></p> 
+        <p id="mailInfo" class="text-center pt-5">Quer alterar algum dado diferente? Mande um <a href="mailto:projetotrashmap@gmail.com?subject=Aluno:%20Alterar%20dados" id="emailTo" class="text-decoration-none" >e-mail  para a equipe:  trashmap.if@gmail.com</a></p> 
     </div>
 
     <!-- Rodapé -->
