--- a/Site/Web2/infoif_adm.html
+++ b/Site/Web2/infoif_adm.html
@@ -156,7 +156,7 @@
             </div>
             <div class="container-fluid col col-sm-12 col-md-6" id="geral">
                 <h2 class="col-12 pt">Atuais Pontos de Coleta:</h2>
-                <div id="map-container-google-1" class="z-depth-1-half m-0 col align-self-center mx-auto" style="height: 40vh !important;">
+                <div id="map-container-google-1" class="z-depth-1-half m-0 col align-self-center mx-auto" style="height: 20rem !important;">
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15009.149206050868!2d-43.838397!3d-19.8700868!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x779dd569368a90d4!2sInstituto%20Federal%20de%20Minas%20Gerais%20Campus%20Sabar%C3%A1!5e0!3m2!1spt-BR!2sbr!4v1619576702328!5m2!1spt-BR!2sbr"
                         loading="lazy" style="border:0" class="h-100 w-100 align-self-center" allowfullscreen>
