--- a/Site/Web2/index.html
+++ b/Site/Web2/index.html
@@ -14,12 +14,18 @@
     <script src="/node_modules/jquery/dist/jquery.slim.js"></script>
     <script src="/node_modules/popper/index.js"></script>
     <script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-
+    <script src="script/carregamento.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 </head>
 
 <body>
+    <div id="preloader">
+        <div class="inner">
+            <div class="spinner-border text-light d-block" style="width: 15rem; height: 15rem;" role="status">
+            </div>
+        </div>
+    </div>
     <!-- Cabeçalho -->
     <header>
         <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
@@ -49,11 +55,23 @@
                             <a class="nav-link js-scroll-trigger" href="#rodape">Contato</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/cadastro.html">Cadastro</a>
+                            <a class="nav-link" href="/cadastro.html">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor"
+                                    class="bi bi-plus-circle-dotted" viewBox="0 0 16 18">
+                                    <path
+                                        d="M8 0c-.176 0-.35.006-.523.017l.064.998a7.117 7.117 0 0 1 .918 0l.064-.998A8.113 8.113 0 0 0 8 0zM6.44.152c-.346.069-.684.16-1.012.27l.321.948c.287-.098.582-.177.884-.237L6.44.153zm4.132.271a7.946 7.946 0 0 0-1.011-.27l-.194.98c.302.06.597.14.884.237l.321-.947zm1.873.925a8 8 0 0 0-.906-.524l-.443.896c.275.136.54.29.793.459l.556-.831zM4.46.824c-.314.155-.616.33-.905.524l.556.83a7.07 7.07 0 0 1 .793-.458L4.46.824zM2.725 1.985c-.262.23-.51.478-.74.74l.752.66c.202-.23.418-.446.648-.648l-.66-.752zm11.29.74a8.058 8.058 0 0 0-.74-.74l-.66.752c.23.202.447.418.648.648l.752-.66zm1.161 1.735a7.98 7.98 0 0 0-.524-.905l-.83.556c.169.253.322.518.458.793l.896-.443zM1.348 3.555c-.194.289-.37.591-.524.906l.896.443c.136-.275.29-.54.459-.793l-.831-.556zM.423 5.428a7.945 7.945 0 0 0-.27 1.011l.98.194c.06-.302.14-.597.237-.884l-.947-.321zM15.848 6.44a7.943 7.943 0 0 0-.27-1.012l-.948.321c.098.287.177.582.237.884l.98-.194zM.017 7.477a8.113 8.113 0 0 0 0 1.046l.998-.064a7.117 7.117 0 0 1 0-.918l-.998-.064zM16 8a8.1 8.1 0 0 0-.017-.523l-.998.064a7.11 7.11 0 0 1 0 .918l.998.064A8.1 8.1 0 0 0 16 8zM.152 9.56c.069.346.16.684.27 1.012l.948-.321a6.944 6.944 0 0 1-.237-.884l-.98.194zm15.425 1.012c.112-.328.202-.666.27-1.011l-.98-.194c-.06.302-.14.597-.237.884l.947.321zM.824 11.54a8 8 0 0 0 .524.905l.83-.556a6.999 6.999 0 0 1-.458-.793l-.896.443zm13.828.905c.194-.289.37-.591.524-.906l-.896-.443c-.136.275-.29.54-.459.793l.831.556zm-12.667.83c.23.262.478.51.74.74l.66-.752a7.047 7.047 0 0 1-.648-.648l-.752.66zm11.29.74c.262-.23.51-.478.74-.74l-.752-.66c-.201.23-.418.447-.648.648l.66.752zm-1.735 1.161c.314-.155.616-.33.905-.524l-.556-.83a7.07 7.07 0 0 1-.793.458l.443.896zm-7.985-.524c.289.194.591.37.906.524l.443-.896a6.998 6.998 0 0 1-.793-.459l-.556.831zm1.873.925c.328.112.666.202 1.011.27l.194-.98a6.953 6.953 0 0 1-.884-.237l-.321.947zm4.132.271a7.944 7.944 0 0 0 1.012-.27l-.321-.948a6.954 6.954 0 0 1-.884.237l.194.98zm-2.083.135a8.1 8.1 0 0 0 1.046 0l-.064-.998a7.11 7.11 0 0 1-.918 0l-.064.998zM8.5 4.5a.5.5 0 0 0-1 0v3h-3a.5.5 0 0 0 0 1h3v3a.5.5 0 0 0 1 0v-3h3a.5.5 0 0 0 0-1h-3v-3z" />
+                                </svg>
+                                Cadastro</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link js-scroll-trigger" href="/login.html">
-                                <i class="bi bi-person"></i>Login</a>
+                                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor"
+                                    class="bi bi-door-open" viewBox="0 0 16 18">
+                                    <path d="M8.5 10c-.276 0-.5-.448-.5-1s.224-1 .5-1 .5.448.5 1-.224 1-.5 1z" />
+                                    <path
+                                        d="M10.828.122A.5.5 0 0 1 11 .5V1h.5A1.5 1.5 0 0 1 13 2.5V15h1.5a.5.5 0 0 1 0 1h-13a.5.5 0 0 1 0-1H3V1.5a.5.5 0 0 1 .43-.495l7-1a.5.5 0 0 1 .398.117zM11.5 2H11v13h1V2.5a.5.5 0 0 0-.5-.5zM4 1.934V15h6V1.077l-6 .857z" />
+                                </svg>
+                                Login</a>
                         </li>
                     </ul>
                 </div>
@@ -78,7 +96,8 @@
                         <p>Trabalho interdisciplinar envolvendo disciplinas do 4º período do curso de Sistemas de
                             Informação. Nosso github com as versões e codificações do projeto. O projeto foi feito por 5
                             alunos do 4º período VFeRoma(Bruno, Felipe, Rodrigo, Marcos, Mateus).</p>
-                        <a href="https://github.com/mateusfilipe/VFeRoma" class="btn btn-outline-primary m-0 " role="button" id="btn_git">Veja no Github</a>
+                        <a href="https://github.com/mateusfilipe/VFeRoma" class="btn btn-outline-primary m-0 "
+                            role="button" id="btn_git">Veja no Github</a>
                     </div>
                 </div>
                 <div class="col-6 container-fluid align-middle align-self-center d-none d-md-block">
@@ -140,7 +159,8 @@
 
     <!-- Rodapé -->
     <footer class="row text-center mt-3 ml-0 mr-0 mb-3 p-0" id="rodape">
-        <a class="navbar-brand js-scroll-trigger col d-none d-md-block mt-md-2  mt-lg-2 mt-xl-2 mt-md-3 p-2" id="nameproj">
+        <a class="navbar-brand js-scroll-trigger col d-none d-md-block mt-md-2  mt-lg-2 mt-xl-2 mt-md-3 p-2"
+            id="nameproj">
             <svg width="33" height="26" viewBox="0 0 33 30" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd"
                     d="M13.6321 0.688052L3.60807 4.00531C2.30584 4.43625 1.86612 4.69046 1.43338 5.0564C1.00063 5.42235 0.681173 5.86487 0.469898 6.39102C0.258623 6.91716 0.155533 7.41486 0.155533 8.78777V23.7661C0.155533 24.4336 0.224963 24.6756 0.35534 24.9196C0.485716 25.1637 0.677038 25.3552 0.92082 25.4857C1.1646 25.6162 1.40641 25.6857 2.07324 25.6857H30.8991C31.5659 25.6857 31.8077 25.6162 32.0515 25.4857C32.2953 25.3552 32.4866 25.1637 32.617 24.9196C32.7474 24.6756 32.8168 24.4336 32.8168 23.7661V8.75484C32.8168 7.39118 32.7157 6.89702 32.5077 6.37391C32.2998 5.85081 31.985 5.41008 31.5578 5.04383C31.1307 4.67759 30.6963 4.42185 29.4073 3.98053L19.8845 0.720191C18.5429 0.260842 18.0804 0.141504 17.5456 0.0618076C17.0108 -0.017889 16.5133 -0.0204465 15.9777 0.0537482C15.4421 0.127943 14.9784 0.24252 13.6321 0.688052ZM2.64876 23.19H10.9175V10.5599C10.9175 10.0077 11.3652 9.55994 11.9175 9.55994H21.0549C21.6071 9.55994 22.0549 10.0077 22.0549 10.5599V23.19H30.3236V8.75484C30.3236 7.78756 30.2885 7.54145 30.1912 7.29663C30.1326 7.14932 30.0562 7.04241 29.9359 6.93927C29.736 6.76787 29.5148 6.65496 28.6004 6.34192L19.0777 3.08157C17.9373 2.69116 17.5658 2.58802 17.1785 2.53029C16.8786 2.48561 16.6198 2.48428 16.3195 2.52588C15.9316 2.57962 15.559 2.67893 14.4147 3.05761L4.39068 6.37486C3.46809 6.68017 3.2448 6.79166 3.04237 6.96284C2.92043 7.06596 2.84278 7.17351 2.78324 7.32178C2.68442 7.5679 2.64876 7.81511 2.64876 8.78777V23.19Z"
